fixed our-mission on mobile

--- a/hugo/themes/EPFL-Rocket-Team/static/stylesheet.css
+++ b/hugo/themes/EPFL-Rocket-Team/static/stylesheet.css
@@ -1047,7 +1047,7 @@ h6 span{
   .mission1 {
     grid-row-start: 1;
     grid-column-start: 1;
-    grid-row-end: 6;
+    grid-row-end: 5;
     grid-column-end: 7;
   }
 
@@ -1084,10 +1084,10 @@ h6 span{
   }
 
   .mission7 {
-    grid-row-start: 6;
+    grid-row-start: 5;
     grid-column-start: 1;
     grid-row-end: 7;
-    grid-column-end: 6;
+    grid-column-end: 7;
   }
 
   #numstudents{
